--- a/src/locales/Fa/translation.json
+++ b/src/locales/Fa/translation.json
@@ -6,9 +6,11 @@
   "home-introduction-desc": "ایکس‌تراست یک سیستم سرمایه‌گذاری مطمئن در ترید رمزارزها با استفاده از قراردادهای هوشمند است. در این جا شما با رمزارز تتر در قرارداد هوشمند xTrust سرمایه‌گذاری می‌کنید. تریدرهای xTrust با کمک تحلیل‌های بسیار دقیق روی سرمایه‌ی شما ترید می‌کنند و شما در هر لحظه می‌توانید وضعیت سرمایه‌گذاری خود را در پنل کاربری مشاهده کنید و در صورت تمایل در هر زمان می‌توانید هر مقدار از سرمایه‌ی خود را خارج و به کیف پول خود منتقل کنید. همچنین می‌توانید با معرفی کاربران دیگر به سیستم، در سود آنان شریک شوید.",
 
   "more": "بیشتر",
-
   "copy-right": "ایکس تراست .تمامی حقوق محفوظ است.",
 
+  "withdraw": "برداشتن",
+  "information": "اطلاعات",
+  "invest": "سرمایه گذاری",
   "start-invest": "شروع سرمایه گذاری",
   "about": "درباره ما",
   "terms": "شرایط و ضوابط",
@@ -48,22 +50,22 @@
   "user-benefits-desc": "سرمایه‌گذاری‌های خود را 24/7 زیر نظر داشته باشید و از انعطاف‌پذیری برداشت فوری وجوه و اشتراک سود از طریق معرفی بهره‌مند شوید.",
 
   "terms-termsDescription": "هر کاربر سیستم در صورت سرمایه‌گذاری در این قرارداد هوشمند با شرایط زیر موافقت می‌کند:",
-  "terms-investmentWithdrawal": "🔵 کاربر در هر زمان می‌تواند به هر میزان در سیستم سرمایه‌گذاری کند یا سرمایه‌ی خود یا هر مقدار از سود آن را از سیستم خارج کند.",
-  "terms-userResponsibility": "🔵 هر کاربر شخصا موظف به حفاظت از سرمایه‌ی خویش است. در صورتی که کاربر در هر مرحله با نحوه‌ی کار تیم ترید موافق نباشد می‌تواند سرمایه‌ی خود را برداشت کند.",
-  "terms-systemFees": "🔵 پرداخت کارمزد سیستم به ترتیب زیر می‌باشد:",
+  "terms-investmentWithdrawal": "کاربر در هر زمان می‌تواند به هر میزان در سیستم سرمایه‌گذاری کند یا سرمایه‌ی خود یا هر مقدار از سود آن را از سیستم خارج کند.",
+  "terms-userResponsibility": "هر کاربر شخصا موظف به حفاظت از سرمایه‌ی خویش است. در صورتی که کاربر در هر مرحله با نحوه‌ی کار تیم ترید موافق نباشد می‌تواند سرمایه‌ی خود را برداشت کند.",
+  "terms-systemFees": "پرداخت کارمزد سیستم به ترتیب زیر می‌باشد:",
   "terms-noFeesUpTo300": "تا رشد ۳۰۰٪ سرمایه‌ی کاربر سیستم هیچ کارمزدی دریافت نخواهد کرد.",
   "terms-feesAbove300": "برای رشد بیش از ۳۰۰٪ سیستم به طور خودکار ۵۰٪ از رشد سرمایه‌ی بیش از ۳۰۰٪ کاربر را در هنگام برداشت کاربر، برداشت خواهد نمود.",
   "terms-referrerFee": "از میزان ۵۰٪ برداشتی، ۱٪ در همان زمان به حساب شخص معرف فرد سرمایه‌گذار در سیستم واریز خواهد شد.",
-  "terms-example": "🔵 مثال: فرض کنید کاربر ۱۰۰۰ تتر در سیستم سرمایه‌گذاری کرده باشد و پس از مدتی با فعالیت‌های تیم ترید، میزان سرمایه‌ی کاربر به ۵۰۰۰ تتر یا معادل آن برسد. در این صورت تا رشد ۳۰۰۰ تتر مشمول هیچ کارمزدی نخواهد بود. از ۲۰۰۰ تتر دیگر رشد سرمایه‌ی کاربر در هنگام برداشت کاربر، ۵۰٪ آن به میزان ۱۰۰۰ تتر کسر خواهد شد. از این ۱۰۰۰ تتر برداشتی ۲۰ تتر به حساب فرد معرف و ۹۸۰ تتر به حساب تیم ترید و مؤسس سیستم واریز خواهد شد.",
-  "terms-partialWithdrawal": "🔵 کارمزدهای مذکور فقط در زمان برداشت کاربر وفقط از میزان برداشت وی کسر خواهد شد. بنابراین در مثال بالا اگر کاربر فقط ۱۰۰۰ تتر از ۵۰۰۰ تتر خود را برداشت کند، مبلغ برداشتی به همان نسبت از ۱۰۰۰ تتر کسر خواهد شد. یعنی از ۱۰۰۰ تتر برداشتی ۲۰۰ تتر کسر می‌شود و ۸۰۰ تتر به کیف پول کاربر واریز می‌شود. از ۲۰۰ تتر کسر شده ۴ تتر به حساب فرد معرف کاربر مورد نظر و ۱۹۶ تتر به حساب تیم ترید و مؤسس سیستم واریز می‌شود.",
-  "terms-additionalInvestments": "🔵 کاربر در هر زمان می‌تواند سرمایه‌ی خود را به هر میزان که بخواهد افزایش دهد. اما مبنای محاسبه‌ی رشد سرمایه‌ی وی، اولین سرمایه گذاری او می‌باشد.",
-  "terms-currencyAndNetwork": "🔵 سرمایه‌گذاری کاربر فقط با رمزارز تتر روی شبکه‌ی BNB قابل انجام است. سیستم هیچ مسئولیتی در مقابل رمزارزهای دیگر که کاربر به اشتباه به سیستم واریز می‌کند، ندارد.",
-  "terms-smartContractMethods": "🔵 رمزارز تتر سرمایه‌گذاری شده فقط باید از طریق متدهای قرارداد هوشمند که در این سایت به کار رفته، در سیستم سرمایه‌گذاری شود و از واریز مستقیم تتر به قرارداد هوشمند xTrust خودداری گردد. سیستم هیچ مسئولیتی در مقابل مبالغی که خارج از متدهای قرارداد هوشمند به حساب آن واریز می‌شود، ندارد.",
-  "terms-tradingOperations": "🔵 تمامی عملیات تیم تریدر فقط در صرافی غیرمتمرکز Pancake Swap V2 انجام می‌شود. به علاوه تمام عملیات ترید جهت اعتماد کاربران فقط روی تعداد محدودی از رمزارزها انجام می‌شود. فهرست این رمزارزها در صفحه‌ی قرارداد هوشمند آمده است.",
-  "terms-withdrawalProcess": "🔵 از آن رو که سرمایه‌ی قرارداد هوشمند در زمان کار سیستم به صورت رمزارزهای مختلف در قرارداد هوشمند ذخیره شده است، در هنگام برداشت سود یا اصل سرمایه‌ی کاربر، سیستم به طور خودکار به نسبت رمزارزهای موجود مقدار درخواستی کاربر را به حساب وی واریز خواهد نمود. علاوه بر آن سیستم امکان تبدیل خودکار همه‌ی رمزارزهای واریزی به تتر را از طریق همان صرافی غیر متمرکز دارد. ولی اکیدا به سرمایه‌گذاران عزیز به خصوص در برداشت مبالغ زیاد توصیه می‌کنیم از این قابلیت استفاده نکنند تا به دلیل اسلیپیج صرافی غیرمتمرکز سرمایه‌ی آنان تقلیل پیدا نکند.",
-  "terms-securityTips": "🔵 توصیه‌ی ما این است سرمایه‌گذاران محترم پس از برداشت سود یا سرمایه شخصا عملیات تبدیل به تتر را در صرافی‌های غیرمتمرکز انجام دهند تا با مدیریت صحیح با کمترین میزان تقلیل سرمایه‌شان را به تتر تبدیل کنند.",
-  "terms-securityNotices": "🔵 توصیه‌ی همیشگی ما در سرمایه‌گذاری در ترید این است که همیشه حاشیه‌ی امن در سرمایه‌گذاری خود را حفظ کنید و از سرمایه‌گذاری مبالغی که امنیت زندگی شما به آن وابسته است، اکیدا خودداری نمایید.",
-  "terms-stayUpdated": "🔵 در هنگام استفاده از xTrust نکات امنیتی لازم با علامت 🔴 به شما اعلام خواهد شد. لطفا به این نکات امنیتی توجه داشته باشید.",
+  "terms-example": "مثال: فرض کنید کاربر ۱,۰۰۰ تتر در سیستم سرمایه‌گذاری کرده باشد و پس از مدتی با فعالیت‌های تیم ترید، میزان سرمایه‌ی کاربر به ۵,۰۰۰ تتر یا معادل آن برسد. در این صورت تا رشد ۳,۰۰۰ تتر مشمول هیچ کارمزدی نخواهد بود. از ۲,۰۰۰ تتر دیگر رشد سرمایه‌ی کاربر در هنگام برداشت کاربر، ۵۰٪ آن به میزان ۱,۰۰۰ تتر کسر خواهد شد. از این ۱,۰۰۰ تتر برداشتی ۲۰ تتر به حساب فرد معرف و ۹۸۰ تتر به حساب تیم ترید و مؤسس سیستم واریز خواهد شد.",
+  "terms-partialWithdrawal": "کارمزدهای مذکور فقط در زمان برداشت کاربر وفقط از میزان برداشت وی کسر خواهد شد. بنابراین در مثال بالا اگر کاربر فقط ۱,۰۰۰ تتر از ۵,۰۰۰ تتر خود را برداشت کند، مبلغ برداشتی به همان نسبت از ۱,۰۰۰ تتر کسر خواهد شد. یعنی از ۱,۰۰۰ تتر برداشتی ۲۰۰ تتر کسر می‌شود و ۸۰۰ تتر به کیف پول کاربر واریز می‌شود. از ۲۰۰ تتر کسر شده ۴ تتر به حساب فرد معرف کاربر مورد نظر و ۱۹۶ تتر به حساب تیم ترید و مؤسس سیستم واریز می‌شود.",
+  "terms-additionalInvestments": "کاربر در هر زمان می‌تواند سرمایه‌ی خود را به هر میزان که بخواهد افزایش دهد. اما مبنای محاسبه‌ی رشد سرمایه‌ی وی، اولین سرمایه گذاری او می‌باشد.",
+  "terms-currencyAndNetwork": "سرمایه‌گذاری کاربر فقط با رمزارز تتر روی شبکه‌ی BNB قابل انجام است. سیستم هیچ مسئولیتی در مقابل رمزارزهای دیگر که کاربر به اشتباه به سیستم واریز می‌کند، ندارد.",
+  "terms-smartContractMethods": "رمزارز تتر سرمایه‌گذاری شده فقط باید از طریق متدهای قرارداد هوشمند که در این سایت به کار رفته، در سیستم سرمایه‌گذاری شود و از واریز مستقیم تتر به قرارداد هوشمند xTrust خودداری گردد. سیستم هیچ مسئولیتی در مقابل مبالغی که خارج از متدهای قرارداد هوشمند به حساب آن واریز می‌شود، ندارد.",
+  "terms-tradingOperations": "تمامی عملیات تیم تریدر فقط در صرافی غیرمتمرکز Pancake Swap V2 انجام می‌شود. به علاوه تمام عملیات ترید جهت اعتماد کاربران فقط روی تعداد محدودی از رمزارزها انجام می‌شود. فهرست این رمزارزها در صفحه‌ی قرارداد هوشمند آمده است.",
+  "terms-withdrawalProcess": "از آن رو که سرمایه‌ی قرارداد هوشمند در زمان کار سیستم به صورت رمزارزهای مختلف در قرارداد هوشمند ذخیره شده است، در هنگام برداشت سود یا اصل سرمایه‌ی کاربر، سیستم به طور خودکار به نسبت رمزارزهای موجود مقدار درخواستی کاربر را به حساب وی واریز خواهد نمود. علاوه بر آن سیستم امکان تبدیل خودکار همه‌ی رمزارزهای واریزی به تتر را از طریق همان صرافی غیر متمرکز دارد. ولی اکیدا به سرمایه‌گذاران عزیز به خصوص در برداشت مبالغ زیاد توصیه می‌کنیم از این قابلیت استفاده نکنند تا به دلیل اسلیپیج صرافی غیرمتمرکز سرمایه‌ی آنان تقلیل پیدا نکند.",
+  "terms-securityTips": "توصیه‌ی ما این است سرمایه‌گذاران محترم پس از برداشت سود یا سرمایه شخصا عملیات تبدیل به تتر را در صرافی‌های غیرمتمرکز انجام دهند تا با مدیریت صحیح با کمترین میزان تقلیل سرمایه‌شان را به تتر تبدیل کنند.",
+  "terms-securityNotices": "توصیه‌ی همیشگی ما در سرمایه‌گذاری در ترید این است که همیشه حاشیه‌ی امن در سرمایه‌گذاری خود را حفظ کنید و از سرمایه‌گذاری مبالغی که امنیت زندگی شما به آن وابسته است، اکیدا خودداری نمایید.",
+  "terms-stayUpdated": "در هنگام استفاده از xTrust نکات امنیتی لازم با علامت 🔴 به شما اعلام خواهد شد. لطفا به این نکات امنیتی توجه داشته باشید.",
 
   "smartContractOverview": "مرور قرارداد هوشمند",
   "smartContractDescription": "قرارداد هوشمند یک فناوری پیشرفته مرتبط با توسعه بلاکچین است. این فناوری به شما امکان می‌دهد تا از مزایای بلاکچین مانند غیرمتمرکز بودن، شفافیت، تغییرناپذیری، قابل تأیید بودن، در دسترس بودن و امنیت برای برنامه‌های کامپیوتری استفاده کنید. در این فناوری، برنامه کامپیوتری شما که شامل مجموعه‌ای از داده‌ها و توابع است، روی بلاکچین ثبت می‌شود. هر کاربری با مجوز مناسب می‌تواند توابع مورد نظر را اجرا کند، داده‌ها را روی بلاکچین ذخیره کند یا ارزهای دیجیتال را به داخل یا خارج از برنامه انتقال دهد.",
@@ -84,11 +86,51 @@
     "تیم معاملاتی نمی‌تواند وجوه را خارج از صرافی Pancake Swap V2 انتقال دهد."
   ],
   "xTrustDeployed": "قرارداد هوشمند xTrust در بلاکچین BNB Smart Chain در آدرس زیر مستقر شده است:",
-  "contractAddress": "0xCE7de646e7208a4Ef112cb6ed5038FA6cC6b12e3",
   "greenTickDescription": "قرارداد هوشمند دارای تیک سبز است که نشان می‌دهد کد ارائه شده با کد منبع ثبت شده در بلاکچین BNB مطابقت دارد.",
   "supportedTokens": "توکن‌های پشتیبانی شده",
   "tradesDescription": "تمام معاملات بین توکن‌های فوق و USDT در بلاکچین BNB Smart Chain در آدرس زیر انجام می‌شود:",
-  "usdtAddress": "0x55d398326f99059fF775485246999027B3197955",
   "consultExpert": "شما می‌توانید با یک متخصص قرارداد هوشمند مشورت کنید تا کد کامل قرارداد هوشمند xTrust را بررسی کرده و از امنیت کامل آن اطمینان حاصل کنید و از هرگونه سوء استفاده جلوگیری کنید.",
-  "viewOnBscScan": "مشاهده قرارداد هوشمند در BscScan"
+  "viewOnBscScan": "مشاهده قرارداد هوشمند در BscScan",
+
+  "token-tabel-btcb": "توکن همبسته‌ی ‌Bitcoin در شبکه‌ی BNB Smart Chain",
+  "token-tabel-eth": "توکن همبسته‌ی ‌Ether در شبکه‌ی BNB Smart Chain",
+  "token-tabel-trx": "توکن همبسته‌ی ‌Tron در شبکه‌ی BNB Smart Chain",
+  "token-tabel-wmatic": "توکن همبسته‌ی ‌Pol در شبکه‌ی BNB Smart Chain",
+  "token-tabel-yfi": "توکن همبسته‌ی ‌Yearn.finance در شبکه‌ی BNB Smart Chain",
+  "token-tabel-comp": "توکن همبسته‌ی ‌Compound Coin در شبکه‌ی BNB Smart Chain",
+  "token-tabel-doge": "توکن همبسته‌ی ‌Dogecoin در شبکه‌ی BNB Smart Chain",
+  "token-tabel-etc": "توکن همبسته‌ی ‌Ether Classic در شبکه‌ی BNB Smart Chain",
+  "token-tabel-stg": "توکن همبسته‌ی ‌Stargate Finance در شبکه‌ی BNB Smart Chain",
+  "token-tabel-token": "توکن همبسته‌ی ‌TokenFi در شبکه‌ی BNB Smart Chain",
+  "token-tabel-woo": "توکن همبسته‌ی ‌WOO در شبکه‌ی BNB Smart Chain",
+  "token-tabel-ton": "توکن همبسته‌ی ‌TON Coin در شبکه‌ی BNB Smart Chain",
+  "token-tabel-ftm": "توکن همبسته‌ی ‌Fantom در شبکه‌ی BNB Smart Chain",
+
+  "start-invest-header": {
+    "title": "به xTrust خوش آمدید",
+    "subtitle": "xTrust یک پلتفرم سرمایه‌گذاری پیشرفته و امن است که برای معاملات ارزهای دیجیتال با استفاده از قراردادهای هوشمند طراحی شده است. با بهره‌گیری از فناوری بلاکچین، xTrust شفافیت، امنیت و کارایی را در هر تراکنش تضمین می‌کند. در قرارداد هوشمند xTrust با استفاده از تتر (USDT)، یک ارز دیجیتال پایدار و قابل اعتماد، سرمایه‌گذاری کنید و اجازه دهید تیم تریدرهای متخصص ما دارایی‌های شما را با دقت و تخصص مدیریت کنند. الگوریتم‌های پیشرفته معاملاتی و ابزارهای تحلیل بازار ما به گونه‌ای طراحی شده‌اند که سود شما را حداکثر و ریسک‌ها را به حداقل برسانند. چه یک سرمایه‌گذار حرفه‌ای باشید و چه تازه وارد دنیای ارزهای دیجیتال شده باشید، xTrust یک تجربه کاربری ساده و کارآمد را برای کمک به رشد ثروت شما فراهم می‌کند. همین امروز به ما بپیوندید و اولین قدم را به سوی آزادی مالی با پلتفرمی که می‌توانید به آن اعتماد کنید، بردارید."
+  },
+  "start-invest-card1": {
+    "title": "معاملات هوشمند",
+    "description": "تریدرهای ما از الگوریتم‌های پیشرفته و تحلیل‌های دقیق برای حداکثر کردن سود شما استفاده می‌کنند."
+  },
+  "start-invest-card2": {
+    "title": "سرمایه‌گذاری امن",
+    "description": "با استفاده از تتر (USDT) و قراردادهای هوشمند، به صورت امن سرمایه‌گذاری کنید و شفافیت و امنیت را تضمین کنید."
+  },
+  "start-invest-card3": {
+    "title": "برداشت انعطاف‌پذیر",
+    "description": "سرمایه خود را در هر زمان برداشت کنید و مستقیماً به کیف پول خود انتقال دهید."
+  },
+  "start-invest-whyChoose": {
+    "title": "چرا xTrust را انتخاب کنیم؟",
+    "description": "xTrust ترکیبی منحصر به فرد از امنیت، انعطاف‌پذیری و سودآوری ارائه می‌دهد. با سیستم مبتنی بر قرارداد هوشمند ما، می‌توانید سرمایه‌گذاری‌های خود را به صورت لحظه‌ای نظارت کنید و در هر زمان وجوه خود را برداشت کنید. علاوه بر این، با معرفی دیگران به پلتفرم، پاداش‌های اضافی دریافت کنید."
+  },
+  "start-invest-footer": {
+    "title": "آماده شروع سرمایه‌گذاری هستید؟",
+    "subtitle": "کیف پول خود را متصل کنید تا سفر سرمایه‌گذاری خود را با xTrust آغاز کنید."
+  },
+
+  "connect-wallet": "اتصال کیف پول",
+  "disconnect-wallet": "قطع اتصال کیف پول"
 }
