--- a/src/locales/Fa/translation.json
+++ b/src/locales/Fa/translation.json
@@ -5,6 +5,13 @@
   "home-introduction-title": "معرفی",
   "home-introduction-desc": "ایکس‌تراست یک سیستم سرمایه‌گذاری مطمئن در ترید رمزارزها با استفاده از قراردادهای هوشمند است. در این جا شما با رمزارز تتر در قرارداد هوشمند xTrust سرمایه‌گذاری می‌کنید. تریدرهای xTrust با کمک تحلیل‌های بسیار دقیق روی سرمایه‌ی شما ترید می‌کنند و شما در هر لحظه می‌توانید وضعیت سرمایه‌گذاری خود را در پنل کاربری مشاهده کنید و در صورت تمایل در هر زمان می‌توانید هر مقدار از سرمایه‌ی خود را خارج و به کیف پول خود منتقل کنید. همچنین می‌توانید با معرفی کاربران دیگر به سیستم، در سود آنان شریک شوید.",
 
+  "token": "توکن",
+  "description": "توضیحات",
+  "contract-address": "آدرس قرارداد",
+
+  "count": "تعداد",
+  "system": "سیستم",
+  "user": "کاربر",
   "more": "بیشتر",
   "copy-right": "ایکس تراست .تمامی حقوق محفوظ است.",
 
@@ -132,5 +139,56 @@
   },
 
   "connect-wallet": "اتصال کیف پول",
-  "disconnect-wallet": "قطع اتصال کیف پول"
+  "disconnect-wallet": "قطع اتصال کیف پول",
+
+  "information-table": {
+    "investors": "تعداد سرمایه‌گذار",
+    "invested": "مبلغ کل سرمایه‌گذاری شده",
+    "withdrawn": "مبلغ کل برداشت شده",
+    "value-capital": "ارزش فعلی سرمایه‌ی سیستم",
+    "ratio-capital": "ضریب فعلی سرمایه سیستم"
+  },
+
+  "user-table": {
+    "investment-amount": "مبلغ سرمایه‌گذاری",
+    "withdrawal-amount": "مبلغ برداشت",
+    "start-day": "ارزش معادل سرمایه‌گذاری در روز شروع",
+    "present-value": "ارزش فعلی سرمایه‌گذاری",
+    "capital-ratio": "ضریب سرمایه",
+    "introduced-users": "کاربران معرفی شده",
+    "introduced-investments": "سرمایه‌گذاری کاربران معرفی شده",
+    "introduced-withdraws": "برداشت کاربران معرفی شده"
+  },
+
+  "available-tokens": {
+    "title": "توکن های موجود",
+    "usdt-value": "ارزش به USDT"
+  },
+
+  "invest-tab": {
+    "title": "سرمایه‌گذاری",
+    "amount": "مقدار (تتر USDT)",
+    "sendTransaction": "ارسال تراکنش",
+    "transactionProcess": "فرآیند تراکنش",
+    "step1": "1. تأیید ارسال تتر از کیف پول شما به قرارداد هوشمند.",
+    "step2": "2. ثبت سرمایه‌گذاری شما با استفاده از قرارداد هوشمند xTrust.",
+    "transactionWarning": "سرمایه‌گذاری شما بدون تأیید هر دو تراکنش انجام نخواهد شد.",
+    "securityTips": "نکات امنیتی",
+    "securityWarning": "هنگام اتصال یک برنامه یا سایت به کیف پول خود، هرگز بیش از مقدار مورد نیاز رمزارز در آن حساب نگهداری نکنید.",
+    "requiredFunds": "برای این تراکنش، فقط موارد زیر را در کیف پول متصل خود نگه دارید:",
+    "usdtTokens": "- توکن‌های تتر USDT به مقدار مورد نظر برای سرمایه‌گذاری.",
+    "bnbTokens": "- مقدار کمی رمزارز BNB برای پرداخت کارمزد."
+  },
+
+  
+    "withdraw-tab": {
+      "title": "برداشت",
+      "maxWithdrawal": "حداکثر برداشت شما:",
+      "maxReceivable": "حداکثر دریافتی شما:",
+      "automaticDistribution": "در این قسمت در هنگام برداشت، سیستم به طور خودکار به نسبت رمزارزهای موجود مقدار درخواستی کاربر را به حساب وی واریز خواهد نمود",
+      "withdrawAmount": "مقدار برداشت توکن (برحسب تتر USDT)",
+      "sendTransaction": "ارسال تراکنش",
+      "receivableAmount": "دریافتی شما معادل:"
+    }
+  
 }
